# AIChallengeGame

./: .replit  LICENSE  README.md  admin_routes.py  ai_agents.py  app.py  challenge_content.py  content_moderation.py  conversation_orchestrator.py  create_admin.py  email_utils.py  events.py  events_deliberation.py  forms.py  game.py  game_data.py  gunicorn.conf.py  main.py  models.py  multi_agent_system.py  openai_utils.py  policy_utils.py  pyproject.toml  replit.md  routes.py  routes_multi_agent.py  test_voice.py  voice_engine.py
attached_assets/: Pasted--Replit-Prompt-Debug-and-Fix-Multi-Agent-Chat-Feature-Role-You-are-a-senior-full-st-1751677536634_1751677536635.txt  Pasted--Replit-Prompt-Fix-Duplicate-Chat-Messages-Enable-Real-AI-Responses-Role-You-are--1751678256902_1751678256903.txt  Pasted--Replit-Prompt-Fix-Multi-Agent-Chat-on-phase2-multi-agent-Role-You-are-a-senior--1751675850744_1751675850745.txt  Pasted--Replit-Prompt-Fix-phase2-multi-agent-with-Randomized-Names-Name-Mentions-Role--1751676309626_1751676309627.txt  Pasted--Replit-Prompt-Implement-Stepwise-Moderated-Multi-Agent-Policy-Deliberation-Role-Y-1752374196752_1752374196753.txt  Pasted--Replit-Prompt-Make-phase2-multi-agent-Fully-Responsive-Role-You-are-a-senior-fr-1751676873004_1751676873005.txt  Pasted-SYSTEM-You-are-orchestrating-a-multi-agent-refugee-education-policy-simulation-for-the-Republic-o-1751472878326_1751472878326.txt  Pasted-The-game-unfolds-over-three-main-stages-and-is-designed-for-teams-of-five-It-is-both-collaborative--1745031184191.txt  (+2 more)
static/: game.js  script.js
(+28 files in other folders)
