[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-socketio>=5.13.0",
    "eventlet>=0.39.1",
    "pytest>=8.3.5",
    "openai>=1.75.0",
    "sendgrid>=6.11.0",
    "markdown>=3.8",
    "pycodestyle>=2.13.0",
    "weasyprint>=65.1",
    "pdfkit>=1.0.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
]
